test/Fail/Erased-modules-5.err
Erased-modules-5.agda:15.5-8: error: [DefinitionIsErased]
Identifier N.B is declared erased, so it cannot be used here
when checking that the expression N.B has type Set → Set
